# cupas2024

./: .env.template  .gitignore  README.md  chatgpt.py  coupang_products.json  main.py  pyproject.toml
blogupload/: TistoryAutoUpload.py
chatgpt/: chatgpt.py  crawler.py  gptmain.py  main.py  openai_client.py  utils.py
cupangApi/: 01_getProductInfo.py  02_cupangURLChange.py  03_getProductHtml.py  chatgpt.py  common.py  getProductInfo.py  getShortenUrl.py
output/0/: blog_post.txt  data.json  video_script.txt
output/1/: blog_post.txt  data.json  video_script.txt
output/10/: blog_post.txt  data.json
output/11/: blog_post.txt  data.json
output/2/: blog_post.txt  data.json  video_script.txt
output/3/: blog_post.txt  data.json  video_script.txt
output/4/: blog_post.txt  data.json  video_script.txt
output/5/: blog_post.txt  data.json  video_script.txt
output/6/: blog_post.txt  data.json  video_script.txt
output/7/: blog_post.txt  data.json  video_script.txt
output/8/: blog_post.txt  data.json
output/9/: blog_post.txt  data.json
samples/: product-info.html
videomake/: .gitignore
